--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/entity": "^13.0.1",
     "@ngrx/router-store": "^13.0.1",
     "@ngrx/store": "store",
+    "@ngrx/store-devtools": "^13.0.1",
     "json-server": "^0.17.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
