--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.0.0",
     "@angular/material": "^13.0.2",
     "@angular/platform-browser": "~13.0.0",
@@ -25,6 +26,7 @@
     "@ngrx/router-store": "^13.0.1",
     "@ngrx/store": "store",
     "@ngrx/store-devtools": "^13.0.1",
+    "firebase": "^9.5.0",
     "json-server": "^0.17.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
